# formal-lang-course

./: FL_HW5-2.ipynb  hw10_data1.txt  hw10_data2.txt  hw10_data3.txt  interpreter.py  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
project/: automaton.py  grammar.py  graphutils.py  lang.py  language.g4
tests/: test_cfg.py  test_intro.py  test_rpq.py
tests/assets/: cfg_test2
tests/autotests/: rpq_template_test.py  test_task11.py  test_task2.py  test_task3.py  test_task4.py  test_task6.py  test_task7.py  test_task8.py  test_task9.py
